@@ -69,12 +69,6 @@ public class DummySynthesizer extends JseBaseSynthesizer {
     }
 
     @Override
-    protected EnginePropertyChangeRequestListener getChangeRequestListener() {
-        // TODO Auto-generated method stub
-        return null;
-    }
-
-    @Override
     protected AudioFormat getAudioFormat() {
         // TODO Auto-generated method stub
         return null;
