@@ -144,35 +144,6 @@ public abstract class BaseEngine implements Engine {
     }
 
     /**
-     * Adds the given {@link EnginePropertyChangeRequestListener} that is
-     * retrieved from {@link #getChangeRequestListener()} to the list of
-     * known listeners of the {@link BaseEngineProperties}.
-     *
-     * @param properties
-     *            the properties to add the listener
-     */
-    protected final void addEnginePropertyChangeRequestListener(
-            final BaseEngineProperties properties) {
-        final EnginePropertyChangeRequestListener listener =
-            getChangeRequestListener();
-        if (listener != null) {
-            properties.addEnginePropertyChangeRequestListener(listener);
-        }
-    }
-
-    /**
-     * Retrieves the {@link EnginePropertyChangeRequestListener} that should
-     * receive notifications if there are any change requests to the
-     * {@link javax.speech.EngineProperties}. This method is called after the
-     * {@link javax.speech.EngineProperties} object is created.
-     * @return the listener for change request notifications,
-     *         <code>null</code> if the underlying engine does not support
-     *         change requests to the {@link javax.speech.EngineProperties}.
-     */
-    protected abstract EnginePropertyChangeRequestListener
-        getChangeRequestListener();
-
-    /**
      * Returns a or'ed set of flags indicating the current state of
      * this <code>Engine</code>.
      *
